--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "apalfrey/select2-bootstrap-5-theme": "^1.3",
         "guzzlehttp/guzzle": "^7.2",
         "kartik-v/bootstrap-fileinput": "^5.5",
         "laravel/framework": "^10.10",
