--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dropzone": "^6.0.0-beta.2",
         "filepond": "^4.31.1",
         "jquery": "^3.7.1",
+        "select2-bootstrap-5-theme": "^1.3.0",
         "simple-datatables": "^9.0.3",
         "toastr": "^2.1.4"
     }
